tests/snapshots/run_wpt_conformance__trtx_reduceL2_float32_1D_tensor_all_negative_integers_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reduce_l2.https.any.js",
    "reduceL2 float32 1D tensor all negative integers default options",
    "trtx",
    "PASS",
)
